# video-similarity

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  prompts.md  pyproject.toml  spec.md
src/video_similarity/: __init__.py  cache.py  config.py  inspection.py  main.py  output.py  processing.py
src/video_similarity/templates/: group_detail.html.j2  index.html.j2
tests/: conftest.py  test_main.py  test_output.py  test_processing.py
