[project]
name = "video-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "opencv-stubs>=0.0.12",
    "scenedetect[opencv]>=0.6.6",
]

[project.scripts]
video-similarity = "video_similarity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

