[project]
name = "video-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "imagehash>=4.3.2",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "opencv-stubs>=0.0.12",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "scenedetect[opencv]>=0.6.6",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
video-similarity = "video_similarity.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
]

